--- a/tagGen.html
+++ b/tagGen.html
@@ -17,8 +17,8 @@
     0250201809260016 00000150
     <div class="wrapper">
       <div>前缀(前16位): <input type="text" id="prefix" /></div>
-      <div>开始编号: <input type="text" id="start" /></div>
-      <div>结束编号: <input type="text" id="end" /></div>
+      <div>开始编号(后8位): <input type="text" id="start" /></div>
+      <div>结束编号(后8位): <input type="text" id="end" /></div>
       <div><button id="btn">生成</button></div>
 
       <textarea name="" id="result" cols="30" rows="10"></textarea>
